syntax = "proto3";

package Proto;

enum MsgId{
    
    None = 0;
    MI_NetworkConnect = 1;
    MI_NetworkListen = 2;

    MI_NetworkDisconnect = 3;
    MI_NetworkDisconnectEx  = 4;

    MI_NetworkDisconnectToNet = 5;

    MI_Ping = 101;

    C2L_AccountCheck = 1001;
    C2L_AccountCheckRs = 1002;
    MI_AccountQueryOnlineToRedis = 1003;
    MI_AccountQueryOnlineToRedisRs = 1004;
    MI_AccountCheckToHttpRs = 1005;

    MI_RobotSyncState = 5001;

    MI_RobotTestBegin = 5100;
    MI_RobotTestEnd =5101;
}